# MyWatchlist

./: CMakeLists.txt  GUI.cpp  GUI.h  QPushButtonDelegate.cpp  QPushButtonDelegate.h  Repository.cpp  Repository.h  Service.cpp  Service.h  ServiceUndo.cpp  ServiceUndo.h  Tutorial.cpp  Tutorial.h  TutorialTableModel.cpp  TutorialTableModel.h  UndoRedo.cpp  UndoRedo.h  Validator.cpp  Validator.h  main.cpp  tutorials.txt  watchlist.csv  watchlist.html
